--- a/src/assets/styles/cmps/CtaModal.scss
+++ b/src/assets/styles/cmps/CtaModal.scss
@@ -175,7 +175,7 @@
                     font-size: rem(12px);
                     line-height: rem(20px);
                     color: $dark-clr-1;
-                    margin-block-end: rem(8px);
+                    margin-block-start: rem(8px);
                 }
             }
         }
