--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -25,6 +25,7 @@ $modal-hover-clr2: #474748;
 $modal-hover-clr: #84868b;
 $modal-filter-txt-clr: #95979d;
 $modal-filter-border-clr: #dadbdd;
+$modal-border-bottom-clr: #f4f4f4;
 
 //Homepage colors
 $home-light-clr: #f1fdf7;
