Change drop down button element

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -148,6 +148,8 @@
                 align-items: center;
 
                 .drop-down-btn {
+                    display: flex;
+                    cursor: pointer;
                     position: relative;
 
                     .drop-down-menu {
