--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -6,9 +6,10 @@
     border-block-end: 1px solid $dark-clr-2;
     background-color: $light-clr;
     transition: background-color 0.6s, border-color 0.6s;
+    container-type: inline-size;
 
     &.static {
-        position: static;
+        position: relative;
     }
 
     &.transparent {
@@ -16,8 +17,6 @@
         border: 0;
 
         .app-header {
-
-
             .logo {
                 color: $light-clr;
             }
@@ -46,6 +45,7 @@
                     }
                 }
             }
+
         }
     }
 
@@ -63,6 +63,61 @@
         background-color: transparent;
         padding-block: 16px;
 
+        @container (max-width: 815px) {
+
+            .search-icon {
+                display: none;
+            }
+        }
+
+        .hamburger-icon {
+            display: none;
+            font-size: rem(22px);
+            padding-block-start: rem(8px);
+            margin-inline-end: rem(15px);
+        }
+
+        @container (max-width: 760px) {
+            .hamburger-icon {
+                display: flex;
+            }
+
+            .menu-backdrop {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.5);
+                pointer-events: none;
+                opacity: 0;
+                transition: 0.2s opacity;
+
+                &.active {
+                    opacity: 1;
+                    pointer-events: unset;
+                }
+
+                nav.links-container {
+                    position: fixed;
+                    height: 100vh;
+                    width: 150px;
+                    background-color: #d4d4d4;
+                    flex-direction: column-reverse;
+                    top: 0;
+                    left: -100%;
+                    align-items: flex-start;
+                    justify-content: flex-end;
+                    transition: 0.4s left;
+
+                    &.active {
+                        left: 0;
+                    }
+                }
+            }
+
+        }
+
         .logo {
             @include logo;
         }
@@ -79,7 +134,13 @@
             margin-inline: em(32px);
 
             .search-bar {
-                @include search-bar
+                @include search-bar;
+
+                @container (max-width: 815px) {
+                    border-radius: 0.3125em;
+                    border-inline-end: 1px solid #e5e5e7;
+                    border-inline-end: 1;
+                }
             }
 
             .btn {
@@ -182,6 +243,33 @@
                     align-items: center;
                 }
             }
+        }
+
+    }
+
+
+    @include for-mobile-layout {
+        position: fixed;
+
+        &.static {
+            position: fixed;
+        }
+    }
+
+    @include for-xs-small-layout {
+        // position: fixed;
+
+        &.static {
+            position: fixed;
+        }
+    }
+
+
+    @include for-small-layout {
+        // position: static;
+
+        &.static {
+            position: relative;
         }
     }
 }
