--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -216,17 +216,18 @@
                     .drop-down-menu {
                         top: 140%;
                         right: 0;
-                        padding: rem(5px) rem(15px);
+                        padding: rem(5px) rem(14px);
                     }
 
                     .drop-down-item {
-                        color: $dark-clr-4;
                         font-weight: 400;
+                        color: $dark-clr-4;
                         letter-spacing: 0.3px;
                         width: rem(100px);
                         padding-block: em(6px);
 
                         &>* {
+                            font-size: rem(17px);
                             color: inherit;
                             font-weight: inherit;
                             margin: 0;
