--- a/src/assets/styles/views/AddGig.scss
+++ b/src/assets/styles/views/AddGig.scss
@@ -4,6 +4,30 @@
     grid-template-columns: 1fr;
     grid-auto-flow: row;
     margin-top: 3.125rem;
+    font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+    .section-heading {
+        grid-column: 1/-1;
+        display: grid;
+        gap: 15px;
+    }
+
+    .heading {
+        color: $accent-clr;
+        font-size: 3rem;
+        font-weight: bolder;
+
+        &:not(:first-child) {
+            margin-block-start: rem(8px);
+        }
+    }
+
+    .sub-heading {
+        font-size: 1.8rem;
+        color: $dark-clr-4;
+        font-weight: 400;
+        margin-block-end: rem(20px);
+    }
 
     .create-gig {
 
@@ -17,21 +41,6 @@
         gap: em(15px);
         margin-block-end: em(25px);
 
-        .heading {
-            color: $accent-clr;
-            font-size: rem(32px);
-
-            &:not(:first-child) {
-                margin-block-start: rem(8px);
-            }
-        }
-
-        .sub-heading {
-            font-size: rem(23px);
-            color: $dark-clr-4;
-            font-weight: 400;
-            margin-block-end: rem(20px);
-        }
 
         .numbers {
             .form-label {
@@ -99,10 +108,18 @@
             font-size: 1.3rem;
             font-weight: 700;
             display: flex;
-            flex-direction: column;
-            gap: 1rem;
+            gap: 0.5rem;
             color: $dark-clr;
             margin-bottom: 12px;
+            justify-content: space-between;
+
+            &>*:first-child {
+                flex-basis: rem(200px);
+            }
+
+            &>*:last-child {
+                flex: 1;
+            }
 
             &.price,
             &.days-to-make {
@@ -110,8 +127,8 @@
             }
 
             &.imgs {
-                margin-block: 15px 25px;
-                width: 80%;
+                // margin-block: 15px 25px;
+                // width: 80%;
 
 
                 .upload-preview {
@@ -150,22 +167,28 @@
             }
 
 
-            input {
+            .input-field {
                 font-size: rem(20px);
                 padding: em(7px);
                 border: em(2px) solid lighten($dark-clr-3, 20%);
                 border-radius: em(5px);
+                font-family: inherit;
 
                 &:focus-visible {
                     border: em(2px) solid lighten($dark-clr-3, 10%);
                     outline: 0;
+                }
+
+                &.desc {
+                    height: 14.1875rem;
+                    resize: none;
                 }
             }
         }
 
         .send {
             width: 100%;
-            min-width: 80%;
+            // min-width: 80%;
             font-size: 1.3rem;
             background-color: $dark-clr;
             margin-block-start: rem(10px);
@@ -184,15 +207,15 @@
     .big-gig-preview {
         box-shadow: rem(2px) rem(2px) rem(15px) #00000050;
         display: grid;
-        gap: 0.425em;
+        gap: rem(15px);
         font-size: rem(12px);
+        min-width: 320px;
 
         position: sticky;
         height: fit-content;
         justify-self: end;
         border: 0.125em solid #e5e5e7;
         padding: 0.875em 1.5em;
-        margin-block: rem(35px);
         width: 100%;
         flex-direction: row;
         bottom: em(8px);
@@ -213,7 +236,8 @@
             place-self: center;
             width: 40%;
             object-fit: cover;
-            max-height: 300px;
+            max-height: rem(300px);
+            border-radius: rem(5px);
         }
 
         .gig-heading {
@@ -245,7 +269,7 @@
             .description {
                 display: none;
                 font-weight: 400;
-                margin-block-end: rem(11px);
+                margin-block: rem(10px);
 
                 &.placeholder {
                     color: $dark-clr-3;
@@ -313,7 +337,7 @@
                     color: $dark-clr-4;
 
                     &.placeholder {
-                        color: $dark-clr-3;
+                        color: lighten($dark-clr-3, 10%);
                     }
                 }
             }
@@ -323,7 +347,10 @@
     }
 
     @include for-narrow-layout {
-        grid-template-columns: 2fr 1.3fr;
+        grid-template-columns: minmax(auto, 700px) 1fr;
+        column-gap: 5.375rem;
+        row-gap: rem(20px);
+        padding-inline: rem(65px);
         margin-top: 3.125rem;
 
         .create-gig {
@@ -334,11 +361,11 @@
             }
 
             .form-label {
-                min-width: 80%;
+                // min-width: 80%;
             }
 
             .package-options {
-                width: 80%;
+                // width: 80%;
                 align-items: start;
             }
 
