--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -8,6 +8,11 @@
     transition: background-color 0.6s, border-color 0.6s;
     container-type: inline-size;
 
+    .logo-container {
+        display: flex;
+        align-items: center;
+    }
+
     &.static {
         position: relative;
     }
@@ -17,8 +22,10 @@
         border: 0;
 
         .app-header {
-            .logo {
-                color: $light-clr;
+            .logo-container {
+                .logo {
+                    color: $light-clr;
+                }
             }
 
             .searchbar-container {
@@ -250,10 +257,42 @@
 
 
     @include for-mobile-layout {
+        bottom: 0;
+        top: unset;
         position: fixed;
 
         &.static {
             position: fixed;
+        }
+
+        &.transparent {
+            background-color: $light-clr;
+
+            .app-header {
+                .logo-container {
+                    .logo {
+                        color: $dark-clr;
+                    }
+
+                    .hamburger-icon {
+                        color: $dark-clr;
+                    }
+                }
+            }
+        }
+
+        .app-header {
+            .menu-backdrop {
+                bottom: 0;
+                top: unset;
+
+                .links-container {
+                    &.active {
+                        top: unset;
+
+                    }
+                }
+            }
         }
     }
 
@@ -262,6 +301,14 @@
 
         &.static {
             position: fixed;
+        }
+
+        &.transparent {
+            .app-header {
+                .logo-container {
+                    color: $light-clr;
+                }
+            }
         }
     }
 
