--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -20,6 +20,7 @@ $pending-clr: #c37e10d7;
 $rejected-clr: darken($dark-clr-1, 10%);
 $approved-clr: #ffc82fd7;
 $fulfilled-clr: $dark-accent-clr;
+$old-fulfilled-clr: #195dc2;
 
 //Modal Colors
 $modal-underline-clr: #efeff0;
