--- a/src/assets/styles/views/AddGig.scss
+++ b/src/assets/styles/views/AddGig.scss
@@ -3,18 +3,19 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-flow: row;
-    margin-top: 3.125rem;
+    margin-block-start: 3.125rem;
+    margin-block-end: rem(40px);
     font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     .section-heading {
         grid-column: 1/-1;
         display: grid;
-        gap: 15px;
+        gap: rem(15px);
     }
 
     .heading {
         color: $accent-clr;
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: bolder;
 
         &:not(:first-child) {
@@ -23,7 +24,7 @@
     }
 
     .sub-heading {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         color: $dark-clr-4;
         font-weight: 400;
         margin-block-end: rem(20px);
@@ -38,19 +39,23 @@
         display: flex;
         flex-direction: column;
         align-items: start;
-        gap: em(15px);
+        gap: em(12px);
         margin-block-end: em(25px);
 
 
         .numbers {
             .form-label {
+                align-items: center;
+
+                .days-input,
+                .price-input {
+                    display: flex;
+                    align-items: center;
+                }
+
                 .delivery-icon {
                     margin: em(5px);
                     color: $dark-clr-3;
-                }
-
-                input {
-                    max-width: 25%;
                 }
             }
         }
@@ -108,13 +113,21 @@
             font-size: 1.3rem;
             font-weight: 700;
             display: flex;
-            gap: 0.5rem;
+            gap: 1.3125rem;
             color: $dark-clr;
-            margin-bottom: 12px;
+            // margin-bottom: rem(12px);
             justify-content: space-between;
 
             &>*:first-child {
-                flex-basis: rem(200px);
+                flex-basis: 13rem;
+                display: flex;
+                flex-direction: column;
+
+                .sub-title {
+                    font-size: rem(14px);
+                    font-weight: 400;
+                    color: $dark-clr-3;
+                }
             }
 
             &>*:last-child {
@@ -160,15 +173,15 @@
 
             .price-input {
                 &::before {
+                    margin-inline: rem(6.5px);
                     content: '$';
-                    margin: em(5px);
                     color: $dark-clr-3;
                 }
             }
 
 
             .input-field {
-                font-size: rem(20px);
+                font-size: 1.1rem;
                 padding: em(7px);
                 border: em(2px) solid lighten($dark-clr-3, 20%);
                 border-radius: em(5px);
@@ -183,6 +196,74 @@
                     height: 14.1875rem;
                     resize: none;
                 }
+            }
+        }
+
+
+        .build-packs {
+            display: grid;
+            gap: rem(12px);
+            background-color: #f0f0f091;
+            border: 1px solid #c8c8c85e;
+            padding: rem(15px);
+            border-radius: rem(4px);
+            margin-top: rem(25px);
+
+            .heading {
+                font-size: rem(34px);
+            }
+
+            .sub-heading {
+                font-size: rem(20px);
+            }
+
+            .numbers {
+                justify-content: space-around;
+
+                span {
+                    flex-direction: row;
+                }
+            }
+
+            .form-label {
+                align-items: center;
+                gap: 1rem;
+            }
+
+            .add-features {
+                display: grid;
+                gap: rem(6px);
+
+
+                .features-container {
+                    // justify-content: space-between;
+                    flex-wrap: wrap;
+                    column-gap: rem(10px);
+                    row-gap: rem(10px);
+
+                    .feature {
+                        display: flex;
+                        gap: rem(2px);
+                        position: relative;
+
+                        img {
+                            width: rem(16px);
+                            position: absolute;
+                            top: 26%;
+                            right: rem(5px);
+                            opacity: 0.2;
+                            pointer-events: none;
+                        }
+
+                        input {
+                            font-size: rem(14.5px);
+                            padding: 7px 14px;
+                            color: $dark-clr-4;
+                            border: 0;
+                        }
+                    }
+                }
+
             }
         }
 
@@ -269,7 +350,7 @@
             .description {
                 display: none;
                 font-weight: 400;
-                margin-block: rem(10px);
+                margin-block-end: rem(10px);
 
                 &.placeholder {
                     color: $dark-clr-3;
@@ -289,7 +370,7 @@
 
                 .gig-price,
                 .estimated {
-                    font-size: 19px;
+                    font-size: rem(19px);
                     color: $dark-clr-1;
                     font-weight: 100;
                 }
@@ -303,6 +384,7 @@
             }
         }
     }
+
 
     @include for-small-layout {
         margin-top: 3.125rem;
@@ -348,9 +430,9 @@
 
     @include for-narrow-layout {
         grid-template-columns: minmax(auto, 700px) 1fr;
-        column-gap: 5.375rem;
+        padding-inline: rem(30px);
+        column-gap: 6.375rem;
         row-gap: rem(20px);
-        padding-inline: rem(65px);
         margin-top: 3.125rem;
 
         .create-gig {
@@ -402,7 +484,7 @@
     }
 
     @include for-large-layout {
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 1.5fr 1fr;
     }
 
 
