--- a/src/assets/styles/cmps/DashboardModal.scss
+++ b/src/assets/styles/cmps/DashboardModal.scss
@@ -74,7 +74,6 @@
             font-size: rem(32px);
             text-align: left;
             color: $accent-clr;
-            padding-inline-start: rem(16px);
             margin-block-end: rem(12px);
         }
 
@@ -83,7 +82,7 @@
         }
 
         .front-charts {
-            justify-content: space-evenly;
+            justify-content: space-between;
 
             .radar {
                 margin-block: rem(20px);
@@ -123,36 +122,10 @@
 
         }
 
-        .small-screens {
-            margin-block: rem(16px);
-            text-align: left;
-            padding-block-end: rem(12px);
-            border-bottom: 1px solid $accent-clr;
-
-            button {
-                font-size: rem(20px);
-                font-weight: 500;
-                text-align: left;
-
-                background: none;
-                color: $list-subtitle-clr;
-
-
-                span {
-                    margin-inline-end: rem(10px);
-                }
-
-                &:hover {
-                    color: $accent-clr;
-                }
-
-                &:focus {
-                    color: $accent-clr;
-                }
-
-                &.active {
-                    color: $accent-clr;
-                }
+        .graph {
+            .sub-header {
+                padding-inline: 0;
+                color: $accent-clr;
             }
         }
 
