Order layout designed

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -31,6 +31,12 @@
     grid-gap: em(32px);
 }
 
+.orders-layout {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(570px, 1fr));
+    grid-gap: em(32px);
+}
+
 .user-layout {
     display: grid;
     grid-template-columns: minmax(200px, 1fr);
