Full and responsive design for order cards

--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -129,6 +129,13 @@
     cursor: pointer;
 }
 
+.click {
+    cursor: pointer;
+    &:hover {
+        color: $dark-clr-3;
+    }
+}
+
 // Media helpers
 
 .square-ratio {
