--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -75,5 +75,6 @@
 @import "cmps/MainBackdrop";
 @import "cmps/DeliveryTimeArea.scss";
 @import "cmps/ServiceOptions.scss";
+@import "cmps/OrderCard.scss";
 @import "cmps/CtaModal.scss";
 @import "cmps/AppHeader";
